--- a/run.html
+++ b/run.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <script>
-        // Cek Token saat halaman dimuat
-    document.addEventListener('DOMContentLoaded', () => {
-        window.location.href = "https://semioratorical-unbreakably-dacia.ngrok-free.dev/"; // Tendang balik jika tidak ada token
-    })
-    </script>
+  <script>
+    async function getData() {
+      try {
+        const response = await fetch('https://API/cek_server');
+        
+        // Pastikan koneksi berhasil
+        if (!response.ok) {
+            window.location.href = "https://semioratorical-unbreakably-dacia.ngrok-free.dev/";
+        }
+
+        const server = await response.json();
+
+        // Asumsikan API mengembalikan {status: "active"}
+        if (server.status === "active") {
+          window.location.href = "https://semioratorical-unbreakably-dacia.ngrok-free.dev/";
+        } else {
+          window.location.href = "./gangguan.html";
+        }
+      } catch (error) {
+          console.error("Terjadi kesalahan:", error);
+          window.location.href = "https://semioratorical-unbreakably-dacia.ngrok-free.dev/";
+
+      }
+    }
+
+    getData();
+  </script>
 </body>
 </html>
