--- a/dashboard.html
+++ b/dashboard.html
@@ -148,6 +148,7 @@
         function handleLogin(event) {
             event.preventDefault();
             alert('Proses login berhasil (Simulasi)');
+            window.location.href = "https://semioratorical-unbreakably-dacia.ngrok-free.dev/";
         }
     </script>
 </body>
