--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <script>
     async function getData() {
       try {
-        const response = await fetch('https://API/cek_server');
+        const response = await fetch('https://semioratorical-unbreakably-dacia.ngrok-free.dev/');
         
         // Pastikan koneksi berhasil
         if (!response.ok) {
           throw new Error("HTTP error " + response.status);
         }
 
-        const server = await response.json();
+        // const server = await response.json();
 
         // Asumsikan API mengembalikan {status: "active"}
-        if (server.status === "active") {
-            window.location.href = "./dashboard.html"
-        } else {
-          window.location.href = "./gangguan.html";
-        }
+        // if (server.status === "active") {
+        window.location.href = "./dashboard.html"
+        // } else {
+        //  window.location.href = "./gangguan.html";
+        // }
       } catch (error) {
           console.error("Terjadi kesalahan:", error);
           window.location.href = "./gangguan.html";
