--- a/index.html
+++ b/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loading</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Memuat...</title>
+    <link rel="icon" type="image/png" href="images/logo.webp">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <script>
-    async function getData() {
-      try {
-        const response = await fetch('https://semioratorical-unbreakably-dacia.ngrok-free.dev/');
-        
-        // Pastikan koneksi berhasil
-        if (!response.ok) {
-          throw new Error("HTTP error " + response.status);
-        }
+    <div class="loader-container">
+        <div class="loader">
+            <div class="spinner"></div>
+            <div class="spinner-inner"></div>
+        </div>
+        <h2>Memuat Aplikasi</h2>
+        <p>Mohon tunggu sebentar...</p>
+        <div class="progress-bar">
+            <div class="progress-fill"></div>
+        </div>
+    </div>
 
-        // const server = await response.json();
-
-        // Asumsikan API mengembalikan {status: "active"}
-        // if (server.status === "active") {
-        window.location.href = "./dashboard.html"
-        // } else {
-        //  window.location.href = "./gangguan.html";
-        // }
-      } catch (error) {
-          console.error("Terjadi kesalahan:", error);
-          window.location.href = "./gangguan.html";
-      }
-    }
-
-    getData();
-  </script>
+    <script src="js/index.js"></script>
 </body>
 </html>
